<resources>
    <string name="app_name">Local Weather</string>
    <string name="action_settings">Settings</string>
    <string name="weather">Weather</string>
    <string name="cloudy">Cloudy</string>
    <string name="temperature">Temperature</string>
    <string name="temp_c">11 C</string>
    <string name="temp_f">20.3 F</string>
    <string name="date">Date</string>
    <string name="long_txt">-1.231241</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="fri_aug_24_12_50_pm">Fri Aug 24, 12:50 PM</string>
    <string name="_36_3124124">36.3124124</string>
</resources>
