<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F0F5"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context="com.cliff.weatherapp.Dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F9D237"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/status_top_bottom"
        android:padding="@dimen/status_item_padding">

        <TextView
            android:id="@+id/tvCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/weather"/>

        <TextView
            android:id="@+id/tvWeather"
            android:layout_marginTop="@dimen/status_item_text_gap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="19sp"
            android:text="@string/cloudy"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A3D696"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/status_top_bottom"
        android:padding="@dimen/status_item_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_marginBottom="@dimen/status_item_text_gap"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTemp_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_f"
                android:textColor="#ffffff"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/tvTemp_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/status_degree_gap"
                android:layout_marginStart="@dimen/status_degree_gap"
                android:text="@string/temp_c"
                android:textColor="#ffffff"
                android:textSize="19sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1AA9EE"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/status_top_bottom"
        android:padding="@dimen/status_item_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/status_item_text_gap"
            android:text="@string/fri_aug_24_12_50_pm"
            android:textColor="#ffffff"
            android:textSize="19sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#585DF2"
        android:layout_marginTop="@dimen/status_top_bottom"
        android:orientation="vertical"
        android:padding="@dimen/status_item_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/status_item_text_gap"
            android:text="@string/_36_3124124"
            android:textColor="#ffffff"
            android:textSize="19sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF5576"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/status_top_bottom"
        android:padding="@dimen/status_item_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/status_item_text_gap"
            android:text="@string/long_txt"
            android:textColor="#ffffff"
            android:textSize="19sp" />

    </LinearLayout>

</LinearLayout>
